--- a/visary/templates/forms/criar_formulario.html
+++ b/visary/templates/forms/criar_formulario.html
@@ -140,7 +140,7 @@
         <p>Cadastre um novo formulário dinâmico para um tipo de visto.</p>
     </div>
     <div class="actions-inline">
-        <a href="{% url 'system:home_formularios' %}" class="btn btn-outline">Voltar</a>
+        <a href="{% url 'system:home_tipos_formulario' %}" class="btn btn-outline">Voltar</a>
     </div>
 </section>
 {% endblock %}
