--- a/visary/templates/forms/editar_formulario.html
+++ b/visary/templates/forms/editar_formulario.html
@@ -211,7 +211,7 @@
         <p>Gerencie o formulário de {{ formulario.tipo_visto.nome }} e suas perguntas.</p>
     </div>
     <div class="actions-inline">
-        <a href="{% url 'system:listar_formularios' %}" class="btn btn-outline">Voltar</a>
+        <a href="{% url 'system:listar_tipos_formulario' %}" class="btn btn-outline">Voltar</a>
         <a href="{% url 'system:criar_pergunta' formulario.pk %}" class="btn btn-primary">➕ Adicionar Pergunta</a>
     </div>
 </section>
