--- a/visary/templates/partners/editar_partner.html
+++ b/visary/templates/partners/editar_partner.html
@@ -224,25 +224,25 @@
             </div>
 
             <div>
-                <label for="{{ form.telefone.id_for_label }}">Telefone *</label>
+                <label for="{{ form.telefone.id_for_label }}">Telefone</label>
                 {{ form.telefone }}
                 {{ form.telefone.errors }}
             </div>
 
             <div>
-                <label for="{{ form.segmento.id_for_label }}">Segmento *</label>
+                <label for="{{ form.segmento.id_for_label }}">Segmento</label>
                 {{ form.segmento }}
                 {{ form.segmento.errors }}
             </div>
 
             <div class="grid-inline">
                 <div>
-                    <label for="{{ form.cidade.id_for_label }}">Cidade *</label>
+                    <label for="{{ form.cidade.id_for_label }}">Cidade</label>
                     {{ form.cidade }}
                     {{ form.cidade.errors }}
                 </div>
                 <div>
-                    <label for="{{ form.estado.id_for_label }}">Estado *</label>
+                    <label for="{{ form.estado.id_for_label }}">Estado</label>
                     {{ form.estado }}
                     {{ form.estado.errors }}
                 </div>
